// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow-params.js [acorn] format 1`] = `
"Unexpected token (3:11)
  1 | class C {
  2 |   #x = 1;
> 3 |   #p = ({ #x: x }) => {}
    |           ^
  4 | }
  5 |"
`;

exports[`arrow-params.js [espree] format 1`] = `
"Unexpected token #x (3:11)
  1 | class C {
  2 |   #x = 1;
> 3 |   #p = ({ #x: x }) => {}
    |           ^
  4 | }
  5 |"
`;

exports[`arrow-params.js [meriyah] format 1`] = `
"Unexpected token: 'PrivateField' (3:11)
  1 | class C {
  2 |   #x = 1;
> 3 |   #p = ({ #x: x }) => {}
    |           ^
  4 | }
  5 |"
`;

exports[`arrow-params.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class C {
  #x = 1;
  #p = ({ #x: x }) => {}
}

=====================================output=====================================
class C {
  #x = 1;
  #p = ({ #x: x }) => {};
}

================================================================================
`;

exports[`assignment.js [acorn] format 1`] = `
"Unexpected token (5:8)
  3 |   m() {
  4 |     let x;
> 5 |     ({ #x: x } = this);
    |        ^
  6 |   }
  7 | }
  8 |"
`;

exports[`assignment.js [espree] format 1`] = `
"Unexpected token #x (5:8)
  3 |   m() {
  4 |     let x;
> 5 |     ({ #x: x } = this);
    |        ^
  6 |   }
  7 | }
  8 |"
`;

exports[`assignment.js [meriyah] format 1`] = `
"Unexpected token: 'PrivateField' (5:8)
  3 |   m() {
  4 |     let x;
> 5 |     ({ #x: x } = this);
    |        ^
  6 |   }
  7 | }
  8 |"
`;

exports[`assignment.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class C {
  #x = 1;
  m() {
    let x;
    ({ #x: x } = this);
  }
}

=====================================output=====================================
class C {
  #x = 1;
  m() {
    let x;
    ({ #x: x } = this);
  }
}

================================================================================
`;

exports[`async-arrow-params.js [acorn] format 1`] = `
"Unexpected token (3:17)
  1 | class C {
  2 |   #x = 1;
> 3 |   #p = async ({ #x: x }) => {}
    |                 ^
  4 | }
  5 |"
`;

exports[`async-arrow-params.js [espree] format 1`] = `
"Unexpected token #x (3:17)
  1 | class C {
  2 |   #x = 1;
> 3 |   #p = async ({ #x: x }) => {}
    |                 ^
  4 | }
  5 |"
`;

exports[`async-arrow-params.js [meriyah] format 1`] = `
"Unexpected token: 'PrivateField' (3:17)
  1 | class C {
  2 |   #x = 1;
> 3 |   #p = async ({ #x: x }) => {}
    |                 ^
  4 | }
  5 |"
`;

exports[`async-arrow-params.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class C {
  #x = 1;
  #p = async ({ #x: x }) => {}
}

=====================================output=====================================
class C {
  #x = 1;
  #p = async ({ #x: x }) => {};
}

================================================================================
`;

exports[`bindings.js [acorn] format 1`] = `
"Unexpected token (4:12)
  2 |   #x = 1;
  3 |   m() {
> 4 |     const {#x: x} = this;
    |            ^
  5 |   }
  6 | }
  7 |"
`;

exports[`bindings.js [espree] format 1`] = `
"Unexpected token #x (4:12)
  2 |   #x = 1;
  3 |   m() {
> 4 |     const {#x: x} = this;
    |            ^
  5 |   }
  6 | }
  7 |"
`;

exports[`bindings.js [meriyah] format 1`] = `
"Unexpected token: 'PrivateField' (4:12)
  2 |   #x = 1;
  3 |   m() {
> 4 |     const {#x: x} = this;
    |            ^
  5 |   }
  6 | }
  7 |"
`;

exports[`bindings.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class C {
  #x = 1;
  m() {
    const {#x: x} = this;
  }
}

=====================================output=====================================
class C {
  #x = 1;
  m() {
    const { #x: x } = this;
  }
}

================================================================================
`;

exports[`for-lhs.js [acorn] format 1`] = `
"Unexpected token (5:11)
  3 |   m() {
  4 |     let x;
> 5 |     for ({#x: x} of [this]);
    |           ^
  6 |   }
  7 | }
  8 |"
`;

exports[`for-lhs.js [espree] format 1`] = `
"Unexpected token #x (5:11)
  3 |   m() {
  4 |     let x;
> 5 |     for ({#x: x} of [this]);
    |           ^
  6 |   }
  7 | }
  8 |"
`;

exports[`for-lhs.js [meriyah] format 1`] = `
"Unexpected token: 'PrivateField' (5:11)
  3 |   m() {
  4 |     let x;
> 5 |     for ({#x: x} of [this]);
    |           ^
  6 |   }
  7 | }
  8 |"
`;

exports[`for-lhs.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class C {
  #x = 1;
  m() {
    let x;
    for ({#x: x} of [this]);
  }
}

=====================================output=====================================
class C {
  #x = 1;
  m() {
    let x;
    for ({ #x: x } of [this]);
  }
}

================================================================================
`;

exports[`nested-bindings.js [acorn] format 1`] = `
"Unexpected token (4:17)
  2 |   #x = 1;
  3 |   m() {
> 4 |     const {x: { #x: [x] }, y: [...{ #x: y }]} = this;
    |                 ^
  5 |   }
  6 | }
  7 |"
`;

exports[`nested-bindings.js [espree] format 1`] = `
"Unexpected token #x (4:17)
  2 |   #x = 1;
  3 |   m() {
> 4 |     const {x: { #x: [x] }, y: [...{ #x: y }]} = this;
    |                 ^
  5 |   }
  6 | }
  7 |"
`;

exports[`nested-bindings.js [meriyah] format 1`] = `
"Unexpected token: 'PrivateField' (4:17)
  2 |   #x = 1;
  3 |   m() {
> 4 |     const {x: { #x: [x] }, y: [...{ #x: y }]} = this;
    |                 ^
  5 |   }
  6 | }
  7 |"
`;

exports[`nested-bindings.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class C {
  #x = 1;
  m() {
    const {x: { #x: [x] }, y: [...{ #x: y }]} = this;
  }
}

=====================================output=====================================
class C {
  #x = 1;
  m() {
    const {
      x: {
        #x: [x],
      },
      y: [...{ #x: y }],
    } = this;
  }
}

================================================================================
`;

exports[`valid-multiple-bindings.js [acorn] format 1`] = `
"Unexpected token (4:12)
  2 |   #x = 1;
  3 |   m() {
> 4 |     const {#x: x1, #x: x2 = x1 } = this;
    |            ^
  5 |   }
  6 | }
  7 |"
`;

exports[`valid-multiple-bindings.js [espree] format 1`] = `
"Unexpected token #x (4:12)
  2 |   #x = 1;
  3 |   m() {
> 4 |     const {#x: x1, #x: x2 = x1 } = this;
    |            ^
  5 |   }
  6 | }
  7 |"
`;

exports[`valid-multiple-bindings.js [meriyah] format 1`] = `
"Unexpected token: 'PrivateField' (4:12)
  2 |   #x = 1;
  3 |   m() {
> 4 |     const {#x: x1, #x: x2 = x1 } = this;
    |            ^
  5 |   }
  6 | }
  7 |"
`;

exports[`valid-multiple-bindings.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-flow", "babel-ts"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class C {
  #x = 1;
  m() {
    const {#x: x1, #x: x2 = x1 } = this;
  }
}

=====================================output=====================================
class C {
  #x = 1;
  m() {
    const { #x: x1, #x: x2 = x1 } = this;
  }
}

================================================================================
`;
